--- a/Kitodo/src/main/webapp/pages/BenutzergruppenAlle.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzergruppenAlle.xhtml
@@ -24,6 +24,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
+    xmlns:p="http://primefaces.org/ui"
     >
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="inc/head.xhtml" />
@@ -73,20 +74,12 @@
                                                     infoClass="text_blue" showDetail="true" showSummary="true"
                                                     tooltip="true"/>
 
-                                        <!-- Datentabelle -->
-                                        <t:dataTable id="auflistung" styleClass="standardTable"
-                                                     width="100%" cellspacing="1px" cellpadding="1px"
-                                                     headerClass="standardTable_Header"
-                                                     rowClasses="standardTable_Row1,standardTable_Row2"
-                                                     columnClasses="standardTable_Column,standardTable_ColumnCentered"
-                                                     var="item" value="#{BenutzergruppenForm.page.listReload}"
-                                                     style="margin-top: 10px;">
-
-                                            <h:column id="id8">
-                                                <f:facet name="header">
-                                                    <h:outputText id="id9" value="#{msgs.benutzergruppe}"/>
-                                                </f:facet>
-
+                                        <!-- List of user groups -->
+                                        <p:dataTable id="auflistung" tableStyleClass="standardTable"
+                                                     var="item" value="#{BenutzergruppenForm.lazyDTOModel}" lazy="true"
+                                                     rows="#{LoginForm.myBenutzer.tableSize}" paginator="true"
+                                                     style="margin-top: 10px; width: 100%;">
+                                            <p:column id="id8" headerText="#{msgs.benutzergruppe}">
                                                 <ui:include src="/pages/inc/ajaxPlusMinusButton.xhtml" />
                                                 <t:dataTable id="id11" styleClass="standardTable" width="90%"
                                                              style="margin-left:12px;margin-top:5px" cellspacing="1px"
@@ -102,13 +95,10 @@
                                                         <h:outputText id="id14" value="#{step.fullName}"/>
                                                     </h:column>
                                                 </t:dataTable>
-                                            </h:column>
+                                            </p:column>
 
-                                            <h:column
+                                            <p:column headerText="#{msgs.auswahl}"
                                                     rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}">
-                                                <f:facet name="header">
-                                                    <h:outputText id="id15" value="#{msgs.auswahl}"/>
-                                                </f:facet>
                                                 <!-- Bearbeiten-Schaltknopf -->
                                                 <h:link id="id16" outcome="/pages/BenutzergruppenBearbeiten"
                                                                title="#{msgs.benutzerBearbeiten}">
@@ -116,9 +106,9 @@
                                                     <h:graphicImage id="id17" alt="edit"
                                                                     value="/pages/images/buttons/edit.gif"/>
                                                 </h:link>
-                                            </h:column>
+                                            </p:column>
 
-                                        </t:dataTable>
+                                        </p:dataTable>
 
                                         <!-- newUser-Schaltknopf -->
                                         <h:commandLink id="id52" action="#{BenutzergruppenForm.Neu}"
@@ -129,22 +119,6 @@
                                             <h:outputText id="id62"
                                                           value="#{msgs.neueBenutzergruppeAnlegen}"/>
                                         </h:commandLink>
-                                        <table width="100%" border="0">
-                                            <tr valign="top">
-                                                <td align="left">
-
-                                                </td>
-                                                <td align="center">
-                                                    <!-- ===================== Datascroller für die Ergebnisse ====================== -->
-
-                                                    <t:aliasBean alias="#{mypage}"
-                                                                 value="#{BenutzergruppenForm.page}">
-                                                        <ui:include src="/pages/inc/datascroller.xhtml"/>
-                                                    </t:aliasBean>
-                                                    <!-- ===================== // Datascroller für die Ergebnisse ====================== -->
-                                                </td>
-                                            </tr>
-                                        </table>
                                     </td>
                                 </tr>
                             </table>
