--- a/Kitodo/src/main/webapp/pages/RegelsaetzeAlle.xhtml
+++ b/Kitodo/src/main/webapp/pages/RegelsaetzeAlle.xhtml
@@ -24,7 +24,7 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:t="http://myfaces.apache.org/tomahawk"
+    xmlns:p="http://primefaces.org/ui"
     >
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="inc/head.xhtml" />
@@ -72,34 +72,22 @@
                                                 infoClass="text_blue" showDetail="true" showSummary="true"
                                                 tooltip="true"/>
 
-                                    <!-- Datentabelle -->
-                                    <t:dataTable id="id8" styleClass="standardTable" width="100%"
-                                                 cellspacing="1px" cellpadding="1px"
-                                                 headerClass="standardTable_Header"
-                                                 rowClasses="standardTable_Row1,standardTable_Row2"
-                                                 columnClasses="standardTable_Column,standardTable_Column,standardTable_ColumnCentered,standardTable_ColumnCentered"
-                                                 style="margin-top: 10px;"
-                                                 var="item" value="#{RulesetForm.page.listReload}">
+                                    <!-- List of rulesets -->
+                                    <p:dataTable id="id8" tableStyleClass="standardTable"
+                                                 var="item" value="#{RulesetForm.lazyDTOModel}" lazy="true"
+                                                 paginator="true" rows="#{LoginForm.myBenutzer.tableSize}"
+                                                 style="margin-top: 10px; width: 100%;">
 
-                                        <h:column id="id9">
-                                            <f:facet name="header">
-                                                <h:outputText id="id10" value="#{msgs.titel}"/>
-                                            </f:facet>
+                                        <p:column id="id9" headerText="#{msgs.titel}">
                                             <h:outputText id="id11" value="#{item.title}"/>
-                                        </h:column>
+                                        </p:column>
 
-                                        <h:column id="id12">
-                                            <f:facet name="header">
-                                                <h:outputText id="id13" value="#{msgs.datei}"/>
-                                            </f:facet>
+                                        <p:column id="id12" headerText="#{msgs.datei}">
                                             <h:outputText id="id14" value="#{item.file}"/>
-                                        </h:column>
+                                        </p:column>
 
-                                        <t:column id="id15" style="text-align:center">
-                                            <f:facet name="header">
-                                                <h:outputText id="id16"
-                                                              value="#{msgs.metadatenSortierungNachRegelsatz}"/>
-                                            </f:facet>
+                                        <p:column id="id15" style="text-align:center"
+                                                  headerText="#{msgs.metadatenSortierungNachRegelsatz}">
                                             <h:graphicImage id="id17"
                                                             value="/pages/images/check_true.gif"
                                                             rendered="#{item.orderMetadataByRuleset}"
@@ -108,42 +96,24 @@
                                                             value="/pages/images/check_false.gif"
                                                             rendered="#{!item.orderMetadataByRuleset}"
                                                             alt="do not order metadata by ruleset"/>
-                                        </t:column>
+                                        </p:column>
 
-                                        <h:column id="id19"
+                                        <p:column id="id19" headerText="#{msgs.auswahl}"
                                                   rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}">
-                                            <f:facet name="header">
-                                                <h:outputText id="id20" value="#{msgs.auswahl}"/>
-                                            </f:facet>
-                                            <!-- Bearbeiten-Schaltknopf -->
+                                            <!-- Edit button -->
                                             <h:link id="id21" outcome="/pages/RegelsaetzeBearbeiten"
                                                            title="#{msgs.regelsatzBearbeiten}">
                                                 <h:graphicImage id="id22" alt="edit ruleset"
-							value="/pages/images/buttons/edit.gif"/>
+                                                                value="/pages/images/buttons/edit.gif"/>
                                                 <f:param name="id" value="#{item.id}"/>
                                             </h:link>
-                                        </h:column>
+                                        </p:column>
 
-                                    </t:dataTable>
+                                    </p:dataTable>
                                     <h:commandLink id="id52" action="#{RulesetForm.createNewRuleset}"
                                                    rendered="#{((LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)) and (RulesetForm.page.totalResults > LoginForm.myBenutzer.tableSize)}">
                                         <h:outputText id="id62" value="#{msgs.neuenRegelsatzAnlegen}"/>
                                     </h:commandLink>
-                                    <table width="100%" border="0">
-                                        <tr valign="top">
-                                            <td align="left">
-
-                                            </td>
-                                            <td align="center">
-                                                <!-- ===================== Datascroller für die Ergebnisse ====================== -->
-                                                <t:aliasBean alias="#{mypage}"
-                                                             value="#{RulesetForm.page}">
-                                                    <ui:include src="/pages/inc/datascroller.xhtml"/>
-                                                </t:aliasBean>
-                                                <!-- ===================== // Datascroller für die Ergebnisse ====================== -->
-                                            </td>
-                                        </tr>
-                                    </table>
                                 </td>
                             </tr>
                         </table>
